# ZIXZA

./: Cargo.toml
data_file/: data_set.csv
src/: collect_data.rs  initplace.rs  lib.rs  load_agent.rs  main.rs  zixza.rs
src/zixza/: aaa.py  board.rs  dice.rs  montecarlo.rs  randomagent.rs
