[package]
name = "ZIXZA"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "*"}
getrandom ={ version = "*", features = ["js"]}
wasm-bindgen = {version = "*"}
csv = {version = "*"}

[lib]
crate-type = ["cdylib"]